--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(var(--black), 0.4);
+  background-color: rgba(18, 20, 23, 0.4);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -49,13 +49,13 @@
 }
 
 .menu-close-icon {
-  stroke: rgb(var(--white));
+  stroke: var(--white);
   transition: stroke var(--transition);
 }
 
 .menu-close-btn:hover .menu-close-icon,
 .menu-close-btn:focus .menu-close-icon {
-  stroke: rgb(var(--black));
+  stroke: var(--black);
 }
 
 @media screen and (min-width: 768px) {
@@ -74,13 +74,13 @@
 .mobile-menu-link {
   font-weight: 600;
   line-height: 1.28571;
-  color: rgb(var(--white));
+  color: var(--white);
   transition: color var(--transition);
 }
 
 .mobile-menu-link:hover,
 .mobile-menu-link:focus {
-  color: rgb(var(--black));
+  color: var(--black);
 }
 
 .mobile-menu-soc-list {
@@ -93,7 +93,7 @@
   align-items: center;
   width: 42px;
   height: 42px;
-  border: 1px solid rgba(var(--white), 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 10px;
 }
 
@@ -105,11 +105,11 @@
 }
 
 .mobile-menu-soc-icon {
-  fill: rgb(var(--white));
+  fill: var(--white);
   transition: fill var(--transition);
 }
 
 .mobile-menu-soc-link:hover .mobile-menu-soc-icon,
 .mobile-menu-soc-link:focus .mobile-menu-soc-icon {
-  fill: rgb(var(--black));
+  fill: var(--black);
 }
